# invenio-jobs

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
invenio_jobs/: __init__.py  api.py  cli.py  config.py  errors.py  ext.py  jobs.py  models.py  proxies.py  registry.py  tasks.py  utils.py  views.py  webpack.py
invenio_jobs/administration/: __init__.py  jobs.py  runs.py
invenio_jobs/alembic/: 1753948224_add_subtasks_columns_to_jobs_run.py  1757597048_add_custom_args_column_to_jobs_job_table.py  1757597048_add_run_args_column_to_jobs_job_table.py  1764848648_add_notification_emails_and_.py  1773910810_merge_invenio_jobs_heads.py  1f896f6990b8_update_jobs_module_table_names.py  356496a01197_create_invenio_jobs_tables.py  371f4cbcb73d_create_invenio_jobs_branch.py  9732b5f7609a_change_datetime_types.py
invenio_jobs/assets/semantic-ui/js/invenio_jobs/administration/: JobActions.js  JobDetailsView.js  JobRunsHeader.js  JobSearchLayout.js  JobSearchResultItemLayout.js  RunActionForm.js  RunButton.js  RunsLogs.js  RunsLogsView.js  RunsSearchResultItemLayout.js  ScheduleJobModal.js  StatusFormatter.js  StopButton.js  SystemJobActions.js  index.js
invenio_jobs/assets/semantic-ui/js/invenio_jobs/administration/details/: index.js
invenio_jobs/assets/semantic-ui/js/invenio_jobs/administration/search/: JobRuns.js  JobRunsHeader.js  JobRunsTitle.js  JobSearchLayout.js  JobSearchResultItemLayout.js  RunButton.js  RunsSearchResultItemLayout.js  SearchResultItemLayout.js  StatusFormatter.js  StopButton.js  SystemJobActions.js  SystemRunActions.js  api.js  index.js
invenio_jobs/assets/semantic-ui/js/invenio_jobs/administration/utils/: diffTimestamps.js
invenio_jobs/assets/semantic-ui/translations/invenio_jobs/: i18next-scanner.config.js  i18next.js  translations.pot
invenio_jobs/assets/semantic-ui/translations/invenio_jobs/messages/en/: messages.po  translations.json
invenio_jobs/assets/semantic-ui/translations/invenio_jobs/messages/zh-Hant/: messages.po
invenio_jobs/assets/semantic-ui/translations/invenio_jobs/scripts/: compileCatalog.js  initCatalog.js
invenio_jobs/logging/: __init__.py  celery_signals.py  jobs.py  tasks.py
invenio_jobs/logging/app_logs/: builders.py  decorator.py  log_event.py
invenio_jobs/logging/app_logs/services/: __init__.py  config.py  permissions.py  results.py  service.py
invenio_jobs/logging/index_templates/: __init__.py
invenio_jobs/logging/index_templates/os-v1/: __init__.py  job-logs-v1.0.0.json
invenio_jobs/logging/index_templates/os-v2/: __init__.py
invenio_jobs/logging/mappings/: __init__.py
invenio_jobs/logging/mappings/os-v1/: __init__.py
invenio_jobs/logging/mappings/os-v1/jobslog/: log-v1.0.0.json
invenio_jobs/logging/mappings/os-v2/: __init__.py
invenio_jobs/resources/: __init__.py  config.py  resources.py
invenio_jobs/services/: __init__.py  config.py  errors.py  links.py  permissions.py  results.py  scheduler.py  schema.py  services.py  ui_schema.py  uow.py
invenio_jobs/templates/semantic-ui/invenio_jobs/emails/: base.html  run_notification.html  run_notification.txt
invenio_jobs/templates/semantic-ui/invenio_jobs/system/jobs/: jobs-details.html  jobs-search.html
invenio_jobs/templates/semantic-ui/invenio_jobs/system/runs/: runs-details.html
invenio_jobs/translations/: messages.pot
invenio_jobs/translations/zh-Hant/LC_MESSAGES/: messages.po
tests/: conftest.py  test_alembic.py  test_cli.py  test_deprecated.py  test_invenio_jobs.py  test_invenio_jobs_caching.py  test_services_job_logs.py  test_services_subtasks.py  test_utils.py
tests/mock_module/: __init__.py  jobs.py  tasks.py
tests/resources/: test_resources.py  test_service.py
