# SPDX-FileCopyrightText: 2024-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2024 CERN.
# SPDX-FileCopyrightText: 2025 Northwestern University.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-jobs"
description = "InvenioRDM module for jobs management"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "celery",
  "invenio",
  "jobs",
  "rdm",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-administration>=6.0.0,<7.0.0",
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-celery>=2.0.0,<3.0.0",
  "invenio-i18n>=3.0.0,<4.0.0",
  "invenio-records-resources>=10.0.0,<11.0.0",
  "invenio-users-resources>=12.0.0,<13.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-jobs"

[project.entry-points."flask.commands"]
jobs = "invenio_jobs.cli:jobs"

[project.entry-points."invenio_administration.views"]
jobs_create = "invenio_jobs.administration.jobs:JobsCreateView"
jobs_details = "invenio_jobs.administration.jobs:JobsDetailsView"
jobs_edit = "invenio_jobs.administration.jobs:JobsEditView"
jobs_list = "invenio_jobs.administration.jobs:JobsListView"
run_details = "invenio_jobs.administration.runs:RunsDetailsView"

[project.entry-points."invenio_assets.webpack"]
jobs = "invenio_jobs.webpack:administration"

[project.entry-points."invenio_base.api_apps"]
invenio_logging_jobs = "invenio_jobs.logging.jobs:InvenioLoggingJobs"
jobs = "invenio_jobs:InvenioJobs"

[project.entry-points."invenio_base.api_blueprints"]
job_logs = "invenio_jobs.views:create_job_logs_bp"
jobs = "invenio_jobs.views:create_jobs_bp"
runs = "invenio_jobs.views:create_runs_bp"
tasks = "invenio_jobs.views:create_tasks_bp"

[project.entry-points."invenio_base.api_finalize_app"]
jobs = "invenio_jobs.ext:finalize_app"

[project.entry-points."invenio_base.apps"]
invenio_logging_jobs = "invenio_jobs.logging.jobs:InvenioLoggingJobs"
jobs = "invenio_jobs:InvenioJobs"

[project.entry-points."invenio_base.blueprints"]
jobs = "invenio_jobs.views:blueprint"

[project.entry-points."invenio_base.finalize_app"]
jobs = "invenio_jobs.ext:finalize_app"

[project.entry-points."invenio_celery.signals"]
invenio_logging = "invenio_jobs.logging.celery_signals"

[project.entry-points."invenio_celery.tasks"]
jobs = "invenio_jobs.tasks"
logging = "invenio_jobs.logging.tasks"

[project.entry-points."invenio_db.alembic"]
jobs = "invenio_jobs:alembic"

[project.entry-points."invenio_db.models"]
jobs = "invenio_jobs.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_jobs"

[project.entry-points."invenio_search.index_templates"]
jobs = "invenio_jobs.logging.index_templates"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-db[postgresql,mysql]>=2.2.0,<3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_jobs/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_jobs/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_jobs/translations/messages.pot"
output_dir = "invenio_jobs/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_jobs/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_jobs",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401,D403"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_jobs --cov-report=term-missing'
testpaths = "tests invenio_jobs"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
